--- a/mdnsjava/pom.xml
+++ b/mdnsjava/pom.xml
@@ -3,9 +3,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>net.posick</groupId>
+        <groupId>org.bidib.net.posick</groupId>
         <artifactId>mdnsjava-full</artifactId>
-        <version>2.2.0</version>
+        <version>${revision}</version>
     </parent>
 
     <packaging>jar</packaging>
@@ -17,7 +17,6 @@
 		<dependency>
 		    <groupId>dnsjava</groupId>
 		    <artifactId>dnsjava</artifactId>
-		    <version>2.1.6</version>
 		</dependency>
     </dependencies>
 
@@ -38,19 +37,9 @@
             </plugin>
 
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.3</version>
-                <configuration>
-                    <source>1.5</source>
-                    <target>1.5</target>
-                </configuration>
-            </plugin>
-
-            <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
-                <version>3.0.1</version>
+				<extensions>true</extensions>
                 <executions>
                     <execution>
                         <id>process-classes</id>
@@ -64,7 +53,6 @@
                                 <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                                 <Bundle-Name>${project.name}</Bundle-Name>
                                 <Bundle-Version>${project.version}</Bundle-Version>
-                                <!-- Bundle-Activator>net.posick.mdns.Activator</Bundle-Activator -->
                                 <Import-Package>org.xbill.DNS;version="[2.1,3)",org.xbill.DNS.utils;version="[2.1,3)"</Import-Package>
                                 <Export-Package>net.posick.mDNS;version="2.2.0";uses:="org.xbill.DNS"</Export-Package>
                             </instructions>
@@ -77,14 +65,6 @@
                 </executions>
             </plugin>
 
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-install-plugin</artifactId>
-                <version>2.5.1</version>
-                <goals>
-                    <goal>install</goal>
-                </goals>
-            </plugin>
         </plugins>
     </build>
 
