Added travis config

--- a/mdnsjava/pom.xml
+++ b/mdnsjava/pom.xml
@@ -18,6 +18,11 @@
 		    <groupId>dnsjava</groupId>
 		    <artifactId>dnsjava</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<scope>test</scope>
+		</dependency>
     </dependencies>
 
     <build>
