--- a/mdnsjava-spi/pom.xml
+++ b/mdnsjava-spi/pom.xml
@@ -22,6 +22,11 @@
             <groupId>org.bidib.net.posick</groupId>
             <artifactId>mdnsjava</artifactId>
         </dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<scope>test</scope>
+		</dependency>
     </dependencies>
 
     <build>
